# particle-9

./: RELEASE_NOTES.md  Rules.md  package-lock.json  package.json  power-of-10-rules-javascript.md
.github/workflows/: release.yml
src/: gl-renderer.js  index.html  main.js  shaders.js  styles.css  visualizers-2d.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs
